--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -25,15 +25,16 @@ wid = params[:wid] if params[:wid]
         </select>
         <label for="pass">Passphrase</label>
         <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
-        <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
       </div>
 
       <div class="form-group">
+        <label for="amount">Amount</label>
+        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
+
         <label for="address">Address</label>
         <input type="text" class="form-control" name="address" id="address" placeholder="Address" value="">
-
       </div>
+
       <% unless (url_path.include? "byron") %>
         <%= render_tx_shelley_form_part %>
       <% end %>
@@ -44,6 +45,8 @@ wid = params[:wid] if params[:wid]
       %>
         (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>
         / <a href="/tx-to-multi-address?wid=<%= wid %>">to many addresses</a>)
+      <% else %>
+        (or <a href="/byron-tx-to-multi-address?wid=<%= wid %>">to many addresses</a>)
       <% end %>
     </form>
   </div>
