--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -109,7 +109,8 @@
               Transactions
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To address</a>
+              <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To single address</a>
+              <a class="dropdown-item" href="/byron-tx-to-multi-address?wid=<%= id %>">To many addresses</a>
               <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Fees</a>
             </div>
           </div>
