--- a/views/form_settings.erb
+++ b/views/form_settings.erb
@@ -12,7 +12,8 @@
             placeholder="" value="<%= pool_strategy %>">
         <small id="help" class="form-text text-muted">
           "direct", "none" or url to SMASH server.
-          Use <a href="/stake-pools-maintenance">stake pool maintenance action</a> to enforce metadata GC.
+          <br/>Use <a href="/stake-pools-maintenance">stake pool maintenance action</a> to enforce metadata GC.
+          <br/>Use <a href="/smash-health-check">smash health check</a> to verify SMASH's health.
         </small>
       </div>
 
