--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -49,6 +49,8 @@
       <a class="dropdown-item" href="/submit-external-tx">Submit External Transaction</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/settings">Settings</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="/smash-health-check">SMASH Health Check</a>
     </div>
   </li>
   <li class="nav-item dropdown">
