List transactions according to start, end date, order, withdrawal amount

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -44,7 +44,7 @@
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To single address</a>
                <a class="dropdown-item" href="/tx-to-multi-address?wid=<%= id %>">To many addresses</a>
                <a class="dropdown-item" href="/tx-fee-to-address?wid=<%= id %>">Fees</a>
-               <a class="dropdown-item" href="/rewards?wid=<%= id %>&minWithdrawal=1">Rewards history</a>
+               <a class="dropdown-item" href="/wallets-transactions?wid=<%= id %>">List</a>
              </div>
            </div>
            <div>
@@ -112,6 +112,7 @@
               <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To single address</a>
               <a class="dropdown-item" href="/byron-tx-to-multi-address?wid=<%= id %>">To many addresses</a>
               <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Fees</a>
+              <a class="dropdown-item" href="/byron-wallets-transactions?wid=<%= id %>">List</a>
             </div>
           </div>
           <div>
