--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -17,6 +17,8 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/byron-wallets">List</a>
       <a class="dropdown-item" href="/byron-wallets-create">Create</a>
+      <a class="dropdown-item" href="/byron-wallets-create-from-pub-key">Create icarus/trezor/ledger (from xpub)</a>
+      <a class="dropdown-item" href="/byron-wallets-create-from-xprv">Create random (from xprv)</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/byron-wallets-create-many">Create many</a>
       <a class="dropdown-item" href="/byron-wallets-delete-all">Delete all</a>
