--- a/views/form_tx_between_wallets.erb
+++ b/views/form_tx_between_wallets.erb
@@ -24,11 +24,15 @@ wid = params[:wid] if params[:wid]
           </option>
           <% end %>
         </select>
+      <div class="form-group">
         <label for="pass">Passphrase</label>
         <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
+      </div>
+      <div class="form-group">
         <label for="amount">Amount</label>
         <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
       </div>
+      <%= render_assets_form_part %>
 
       <div class="form-group">
         <label for="wid_dst">Destination Wallet</label>
