--- a/views/form_tx_fee_to_address.erb
+++ b/views/form_tx_fee_to_address.erb
@@ -18,18 +18,16 @@ wid = params[:wid] if params[:wid]
           <% end %>
         </select>
       </div>
-
-      <div class="form-group">
-        <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
-
-      </div>
-
       <div class="form-group">
         <label for="address">Address</label>
         <input type="text" class="form-control" name="address" id="address" placeholder="Address" value="">
-
       </div>
+      <div class="form-group">
+        <label for="amount">Amount</label>
+        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
+      </div>
+      <%= render_assets_form_part %>
+
       <% unless (url_path.include? "byron") %>
         <%= render_tx_shelley_form_part %>
       <% end %>
