Assets in multi-address transacrions and fees

--- a/views/form_tx_to_multi_address.erb
+++ b/views/form_tx_to_multi_address.erb
@@ -28,6 +28,7 @@ wid = params[:wid] if params[:wid]
       </div>
 
       <%= render_addr_amt %>
+      <%= render_assets_form_part(multi = true) %>
 
       <% unless (url_path.include? "byron") %>
         <%= render_tx_shelley_form_part %>
