--- a/views/form_tx_between_wallets.erb
+++ b/views/form_tx_between_wallets.erb
@@ -28,11 +28,8 @@ wid = params[:wid] if params[:wid]
         <label for="pass">Passphrase</label>
         <input type="text" class="form-control" name="pass" id="pass" placeholder="Passphrase" value="Secure Passphrase">
       </div>
-      <div class="form-group">
-        <label for="amount">Amount</label>
-        <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount to send" value="1000000">
-      </div>
-      <%= render_assets_form_part %>
+      <%= render_amount_form_part(wallets.select{|w| w['id'] == wid }.first['balance']) %>
+      <%= render_assets_form_part(wallets.select{|w| w['id'] == wid }.first['assets']['available']) %>
 
       <div class="form-group">
         <label for="wid_dst">Destination Wallet</label>
