--- a/views/form_tx_fee_to_multi_address.erb
+++ b/views/form_tx_fee_to_multi_address.erb
@@ -20,7 +20,7 @@ wid = params[:wid] if params[:wid]
       </div>
 
       <%= render_addr_amt %>
-      <%= render_assets_form_part(multi = true) %>
+      <%= render_assets_form_part(wallets.select{|w| w['id'] == wid }.first['assets']['available'], multi = true) %>
 
       <% unless (url_path.include? "byron") %>
         <%= render_tx_shelley_form_part %>
