shared wallets create / delete / show

--- a/views/form_create_wallet.erb
+++ b/views/form_create_wallet.erb
@@ -2,10 +2,11 @@
   url_path = request.env['PATH_INFO'].to_s
   byron_ep = "/byron-wallets-create"
   shelley_ep = "/wallets-create"
+  shared_ep = "/shared-wallets-create"
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
+    <form action="<%= (url_path.include? "byron") ? byron_ep : ((url_path.include? "shared") ? shared_ep : shelley_ep) %>" method="POST">
       <% if url_path.include? "byron" %>
         <div class="form-group">
           <label for="style">Style</label>
@@ -20,7 +21,7 @@
 
       <div class="form-group">
         <label for="wal_name">Wallet name</label>
-        <input type="text" class="form-control" name="wal_name" id="wal_name" placeholder="Wallet Name" value="My Test Wallet">
+        <input type="text" class="form-control" name="wal_name" id="wal_name" placeholder="Wallet Name" value="<%= url_path.include?("shared") ? 'My Test Shared Wallet' : 'My Test Wallet' %>">
       </div>
 
       <div class="form-group">
@@ -39,6 +40,61 @@
             <label for="pool_gap">Address pool gap</label>
             <input type="text" class="form-control" name="pool_gap" id="pool_gap"
                    placeholder="Address pool gap" value="20">
+          </div>
+      <% end %>
+
+      <%# Shared wallets specific %>
+      <% if url_path.include? "shared" %>
+          <div class="form-group">
+            <label for="account_index">Account index</label>
+            <input type="text" class="form-control" name="account_index" id="account_index"
+                   placeholder="Account index" value="">
+            <small id="help_acc" class="form-text text-muted">An individual segment within a derivation path. E.g. 1852H.</small>
+
+          </div>
+
+          <div class="form-group">
+            <label for="payment_script_template">Payment script template</label>
+            <textarea class="form-control" name="payment_script_template" id="payment_script_template" rows="4"></textarea>
+            <small id="help_pay" class="form-text text-muted">
+              <details>
+                <summary>Examplary template</summary>
+                  <code>
+                    { "cosigners":
+                        { "cosigner#0": "1423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db11423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db2" },
+                      "template":
+                          { "all":
+                             [ "cosigner#0",
+                               { "active_from": 120 }
+                             ]
+                          }
+                    }
+                  </code>
+              </details>
+            </small>
+          </div>
+
+          <div class="form-group">
+            <label for="delegation_script_template">Delegation script template</label>
+            <textarea class="form-control" name="delegation_script_template" id="delegation_script_template" rows="4"></textarea>
+            <small id="help_del" class="form-text text-muted">
+              <details>
+                <summary>Examplary template</summary>
+                  <code>
+                    { "cosigners":
+                        { "cosigner#0": "1423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db11423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db2" },
+                      "template":
+                          { "all":
+                             [ "cosigner#0",
+                               "cosigner#1",
+                               { "active_from": 120 },
+                               { "active_until": 100 }
+                             ]
+                          }
+                    }
+                  </code>
+              </details>
+            </small>
           </div>
       <% end %>
 
