--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -17,6 +17,7 @@
     <div class="dropdown-menu">
       <!-- <a class="dropdown-item" href="/shared-wallets">List</a> -->
       <a class="dropdown-item" href="/shared-wallets-create">Create</a>
+      <a class="dropdown-item" href="/shared-wallets-create-from-pub-key">Create from pub key</a>
     </div>
   </li>
   <li class="nav-item dropdown">
