--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -62,8 +62,8 @@
                Migrations
              </a>
              <div class="dropdown-menu">
+               <a class="dropdown-item" href="/wallets-migration-plan?wid=<%= wal['id'] %>">Create Plan</a>
                <a class="dropdown-item" href="/wallets-migrate?wid=<%= id %>">Migrate</a>
-               <a class="dropdown-item" href="/wallets-migration-fee?wid=<%= wal['id'] %>">Fees</a>
              </div>
            </div>
            <div>
@@ -143,8 +143,8 @@
               Migrations
             </a>
             <div class="dropdown-menu">
+              <a class="dropdown-item" href="/byron-wallets-migration-plan?wid=<%= wal['id'] %>">Create Plan</a>
               <a class="dropdown-item" href="/byron-wallets-migrate?wid=<%= id %>">Migrate</a>
-              <a class="dropdown-item" href="/byron-wallets-migration-fee?wid=<%= wal['id'] %>">Fees</a>
             </div>
           </div>
           <div>
