--- a/views/form_get_acc_public_key.erb
+++ b/views/form_get_acc_public_key.erb
@@ -30,10 +30,10 @@
         <small id="help" class="form-text text-muted">Example: 1852H. An individual segment within a derivation path.</small>
       </div>
       <div class="form-group">
-        <label for="role">Extended</label>
-        <select class="form-control" name="extended" id="extended">
-          <option <%= "selected" if extended == "true" %> value="true">true</option>
-          <option <%= "selected" if extended == "false" %> value="false">false</option>
+        <label for="role">Format</label>
+        <select class="form-control" name="format" id="format">
+          <option <%= "selected" if format == "extended" %> value="extended">extended</option>
+          <option <%= "selected" if format == "non_extended" %> value="non_extended">non_extended</option>
         </select>
       </div>
       <div class="form-group">
